# PlateRecognition-build

./: README.md
.github/workflows/: build-apk.yml  build-so.yml
PlateDetectionRecognition/src/ncnn/: CMakeLists.txt  plate_algorithm_ncnn.cpp  plate_algorithm_ncnn.h  platedetector_yolov7_ncnn.cpp  platedetector_yolov7_ncnn.h  platerecognition_ncnn.cpp  platerecognition_ncnn.h
PlateDetectionRecognition/src/ncnn/jni/: jni_bridge.cpp
hyperlpr3-android-sdk-master/app/: build.gradle
hyperlpr3-android-sdk-master/app/src/main/: AndroidManifest.xml
hyperlpr3-android-sdk-master/app/src/main/java/com/hyperai/hyperlpr_sdk_demo/: CameraActivity.java  CameraPreviews.java  MainActivity.java
hyperlpr3-android-sdk-master/app/src/main/res/layout/: activity_camera.xml
hyperlpr3-android-sdk-master/app/src/main/res/values/: strings.xml
hyperlpr3-android-sdk-master/gradle/wrapper/: gradle-wrapper.properties
hyperlpr3-android-sdk-master/hyperlpr3/: build.gradle
hyperlpr3-android-sdk-master/hyperlpr3/src/main/assets/plate_ncnn/: .gitkeep  plate_recognition_color.param  yolov7plate.param
hyperlpr3-android-sdk-master/hyperlpr3/src/main/cpp/: CMakeLists.txt
hyperlpr3-android-sdk-master/hyperlpr3/src/main/java/com/hyperai/hyperlpr3/: HyperLPR3.java
hyperlpr3-android-sdk-master/hyperlpr3/src/main/java/com/hyperai/hyperlpr3/bean/: HyperLPRParameter.java
hyperlpr3-android-sdk-master/hyperlpr3/src/main/java/com/hyperai/hyperlpr3/settings/: SDKConfig.java
scripts/: build_hyperlpr3_so.sh  build_ncnn_android.sh  build_ncnn_host.sh  convert_onnx_to_ncnn.sh
